updated sendEvents transactions
